added de blueberry

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 				</div>
 				<div class="row flex-grow-1">
 					<div class="col">
-					<canvas id="myCanvas">
-						<!-- add the canvas animation here -->	
-					</canvas>
+						<iframe class="bluebud" src="html5-canvas-game-character-1.html"></iframe>
 					</div>
 					<div class="col">
 						<iframe class="chatbot" src="Preview%20Link.html">
