--- a/index.html
+++ b/index.html
@@ -15,29 +15,25 @@
 		<div class="container-fluid">
 			<div class="container d-flex flex-column">
 				<div class="jumbotron">
-					<div class="intro-text">
+					<div class="row">
+						<img src="images/1200px-JetBlue_Airways_Logo.svg.png"/>
+					</div>
+					<div class="row intro-text">
 						<h1>Meet Blue Bud</h1>
 						<h4>Your Personal Travel Assistant.</h4>
 					</div>
 				</div>
+					
 				<div class="row flex-grow-1">
 					<div class="col">
 						<iframe class="bluebud" src="html5-canvas-game-character-1.html"></iframe>
 					</div>
 					<div class="col">
-						<iframe class="chatbot" src="Preview%20Link.html">
-						</iframe>
+						<iframe class="chatbot" src="Preview%20Link.html"></iframe>
 					</div>
 				</div>
 				</div>
 			</div>
-
-		<script>
-			var canvas = document.getElementById("myCanvas");
-			var ctx = canvas.getContext("2d");
-			ctx.fillStyle = "#FF0000";
-			ctx.fillRect(0,0,150,75);
-		</script>
 		
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
