--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 						<img src="images/1200px-JetBlue_Airways_Logo.svg.png"/>
 					</div>
 					<div class="row intro-text">
-						<h1>Meet Blue Bud</h1>
-						<h4>Your Personal Travel Assistant.</h4>
+						<h1>Meet Blue Bud!</h1>
+						<h5>Your Personal Travel Assistant.</h5>
 					</div>
 				</div>
 					
